--- a/css/dark.css
+++ b/css/dark.css
@@ -1,3 +1,4 @@
+/* File CSS ini digunakan sebagai referensi warna-warna berbasis Material Theme. File ini sebagian dibuat dari https://material-foundation.github.io/material-theme-builder/ */
 :root {
   --color-primary: rgb(192 193 255);
   --color-surface-tint: rgb(192 193 255);
